--- a/index.html
+++ b/index.html
@@ -2,55 +2,41 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BMI Calculator</title>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <script src="js/bootstrap/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:400,700" />
 </head>
 
 <body>
-    <h3 class="text-center"><b>BMI</b> Calculator</h3>
-    <form id="form" class="w-50 mx-sm-auto glass p-3" onsubmit=" validateForm()">
-        <div class="row mb-4">
-            <div class="col">
-                <div class="form-outline">
-                    <label for="age" class="form-label">Age</label>
-                    <input type="text" id="age" name="age" class="form-control" />
-                </div>
-            </div>
-            <div class="col"></div>
+    <h3><b>B</b>ody <b>M</b>ass <b>I</b>ndex Calculator</h3>
+
+    <form class="form" id="form" onsubmit="validateForm()">
+
+        <div class="row-one">
+
+            <input type="text" class="text-input" id="age" autocomplete="off" required />
+            <p class="text">Age</p>
+
+            <label class="container">
+                <input type="radio" name="radio" id="m" />
+                <p class="text">Male</p>
+                <span class="checkmark"></span>
+            </label>
+
+            <label class="container">
+                <input type="radio" name="radio" id="f" />
+                <p class="text">Female</p>
+                <span class="checkmark"></span>
+            </label>
+
         </div>
 
-        <div class="form-check">
-            <input class="form-check-input" type="radio" name="gender" id="male" value="male" />
-            <label class="form-check-label" for="male">Male</label>
+        <div class="row-two">
+            <input type="text" class="text-input" id="height" autocomplete="off" required />
+            <p class="text">Height (cm)</p>
+            <input type="text" class="text-input" id="weight" autocomplete="off" required />
+            <p class="text">Weight (kg)</p>
         </div>
-        <div class="form-check">
-            <input type="radio" name="gender" id="female" class="form-check-input" value="female" />
-            <label for="female" class="form-check-label">Female</label>
-        </div>
-
-        <div class="row mb-4">
-            <div class="col">
-                <div class="form-outline">
-                    <label for="height" class="form-label">Height (cm)</label>
-                    <input type="text" name="height" id="height" class="form-control">
-                </div>
-            </div>
-            <div class="col">
-                <div class="form-outline">
-                    <label for="weight" class="form-label">Weight (kg)</label>
-                    <input type="text" name="weight" id="weight" class="form-control">
-                </div>
-            </div>
-        </div>
-        <div class="col text-center">
-            <input id="submit" type="submit" value="Calculate" class="btn btn-primary text-center">
-        </div>
+        <button type="button" id="submit">Calculate</button>
     </form>
 </body>
 <script src="js/scripts.js"></script>
